# enterprise-platform-compiler

./: README.md  pyproject.toml
docs/: COMPILER_SEMANTICS.md
examples/: generate_contract_examples.py  generate_demo_data.py  generate_explain_report.py  generate_incremental_report.py
examples/contracts/: README.md
examples/contracts/dependency_removal/: after.yaml  before.yaml  expected_output.txt  focus_node.txt
examples/contracts/dependency_swap/: after.yaml  before.yaml  expected_output.txt  focus_node.txt
examples/contracts/no_op/: expected_output.txt
examples/contracts/property_change/: after.yaml  expected_output.txt
examples/contracts/rename/: after.yaml  before.yaml  (+2 more)
examples/providers/: mixed.yaml
providers/fake/: provider.py
providers/terraform_cli/: provider.py
src/epc/: ast.py  capabilities.py  cli.py  config.py  dag.py  errors.py  explain.py  ir.py  normalizer.py  parser.py  pipeline.py  provider.py  statestore.py  symboltable.py
tests/: test_analysis.py  test_capabilities.py  test_cascading_removal.py  test_cli.py  test_config.py  test_contract_examples.py  test_dag.py  test_dependency_swap.py  test_determinism.py  test_explain.py  test_explanation_completeness.py  test_incremental.py  test_incremental_report.py  test_ir.py  test_missing_evidence.py  test_normalizer.py  test_parallel_demo.py  test_parser.py  test_passes.py  test_pipeline.py  test_provider_swap.py  test_rename_semantics.py  test_terraform_cli_provider.py
tests/fixtures/: data_platform.yaml  incremental_after.yaml  incremental_before.yaml  parallel_demo.yaml
(+19 files in other folders)
