[project]
name = "epc"
version = "0.1.0"
description = "Enterprise Platform Compiler — compiler frontend (parse -> AST -> IR -> DAG)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src", "providers"]
